# JsonRpcGclient

./: LICENSE  cli.sh  json_rpc_client.py  pyproject.toml
jrpc_gclient/: __main__.py  client.py  gui.py  json_rpc_client.py  jsonrpcclient.kv
